crates/but-api-macros/tests/tests/ui/fail/base_permission_param_reposhared_mut_ref.stderr
error: Explicit repository permission parameters must use `&RepoShared` for shared access
 --> tests/ui/fail/base_permission_param_reposhared_mut_ref.rs:8:12
  |
8 |     _perm: &mut but_ctx::access::RepoShared,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
